[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Hits/HitRoller.gd" type="Script" id=2]
[ext_resource path="res://src/Hits/HitBeat.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.411484, 0.919983, -143.884, -11.7242, 143.884, 11.7242, 111.092, 88.4845, 0, 0, 0, 0, 240.398, 214.929 )
}

[sub_resource type="GDScript" id=8]
script/source = "extends Area2D


var fill_color = Colors.ORANGE


func _draw():
	draw_circle(Vector2.ZERO, 64.0, fill_color)
	draw_arc(Vector2.ZERO, 64.0, 0.0, 2*PI, 100, Colors.WHITE, 6.0, true)
"

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[sub_resource type="GDScript" id=4]
script/source = "extends Line2D


var all_points
var _point_number = 1


func _on_Timer_timeout():
	add_point(all_points[_point_number])
	
	_point_number += 1
	
	if _point_number == all_points.size() - 1:
		$Timer.stop()
"

[sub_resource type="Animation" id=5]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Line2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.1, 1.1, 1.1, 1 ), Color( 1.10196, 1.10196, 1.10196, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Line2D:width")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.406126, 1 ),
"update": 0,
"values": [ 48.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1.10196, 1.10196, 1.10196, 0 ), Color( 1.1, 1.1, 1.1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Line2D:width")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.615572, 1 ),
"update": 0,
"values": [ 0.0, 48.0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 64
font_data = ExtResource( 1 )

[node name="HitRoller" type="Path2D"]
modulate = Color( 1.1, 1.1, 1.1, 1 )
self_modulate = Color( 1, 1, 1, 1 )
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2( -0.411484, 0.919983 )
rotate = false
loop = false

[node name="Roller" type="Area2D" parent="PathFollow2D"]
script = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Roller"]
shape = SubResource( 3 )

[node name="Line2D" type="Line2D" parent="."]
z_index = -1
width = 48.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = SubResource( 4 )

[node name="Timer" type="Timer" parent="Line2D"]
wait_time = 0.01
autostart = true

[node name="Beat" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/destroy = SubResource( 5 )
anims/show = SubResource( 6 )

[node name="FirstBeat" type="Label" parent="."]
margin_left = -51.7033
margin_top = -50.1493
margin_right = 48.2968
margin_bottom = 49.8507
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondBeat" type="Label" parent="."]
margin_left = 192.403
margin_top = 167.23
margin_right = 292.403
margin_bottom = 267.23
custom_fonts/font = SubResource( 7 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="PathFollow2D/Roller" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="PathFollow2D/Roller" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="PathFollow2D/Roller" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Line2D/Timer" to="Line2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
